<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/edge_margin"
    tools:context="com.example.android.programmingconceptsquiz.QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextRelated"
            android:text="@string/question1" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q1o1"
                style="@style/Button"
                android:text="@string/q1o1" />

            <RadioButton
                android:id="@+id/q1o2"
                style="@style/Button"
                android:text="@string/q1o2" />

            <RadioButton
                android:id="@+id/q1o3"
                style="@style/Button"
                android:text="@string/q1o3" />

            <RadioButton
                android:id="@+id/q1o4"
                style="@style/Button"
                android:text="@string/q1o4" />

        </RadioGroup>

        <TextView
            style="@style/TextRelated"
            android:text="@string/question2" />

        <CheckBox
            android:id="@+id/q2o1"
            style="@style/Button"
            android:text="@string/q2o1" />

        <CheckBox
            android:id="@+id/q2o2"
            style="@style/Button"
            android:text="@string/q2o2" />

        <CheckBox
            android:id="@+id/q2o3"
            style="@style/Button"
            android:text="@string/q2o3" />

        <CheckBox
            android:id="@+id/q2o4"
            style="@style/Button"
            android:text="@string/q2o4" />

        <TextView
            style="@style/TextRelated"
            android:text="@string/question3" />

        <EditText
            android:id="@+id/q3o1"
            style="@style/TextRelated"
            android:hint="@string/q3o1" />

        <TextView
            style="@style/TextRelated"
            android:text="@string/question4" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q4o1"
                style="@style/Button"
                android:text="@string/q4o1" />

            <RadioButton
                android:id="@+id/q4o2"
                style="@style/Button"
                android:text="@string/q4o2" />

            <RadioButton
                android:id="@+id/q4o3"
                style="@style/Button"
                android:text="@string/q4o3" />

            <RadioButton
                android:id="@+id/q4o4"
                style="@style/Button"
                android:text="@string/q4o4" />

        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="scoreOnly"
            android:text="@string/submit" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="scoreExplanation"
            android:text="@string/submit2" />

    </LinearLayout>

</ScrollView>
